# arduino-clion

./: CMakeLists.txt  README.md
cmake/: ArduinoToolchain.cmake  reset.py
cmake/Platform/: Arduino.cmake
example/: CMakeLists.txt  main.cpp
